Update CORS config, ignore application.properties, add example config